--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,19 +1,10 @@
-/*
-* ------------------------------------------------------------
-* IMPORTANT: The contents of this file are auto-generated.
-*
-* This file may be updated by the Shopify admin theme editor
-* or related systems. Please exercise caution as any changes
-* made to this file may be overwritten.
-* ------------------------------------------------------------
-*/
 {
   "current": {
     "logo": "shopify:\/\/shop_images\/tone-logo-white.png",
     "logo_width": 110,
-    "type_header_font": "assistant_n4",
+    "type_header_font": "inter_n3",
     "heading_scale": 100,
-    "type_body_font": "inter_n4",
+    "type_body_font": "inter_n3",
     "body_scale": 100,
     "page_width": 1400,
     "spacing_sections": 0,
