--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,16 +1,8 @@
-/*
-* ------------------------------------------------------------
-* IMPORTANT: The contents of this file are auto-generated.
-*
-* This file may be updated by the Shopify admin theme editor
-* or related systems. Please exercise caution as any changes
-* made to this file may be overwritten.
-* ------------------------------------------------------------
-*/
 {
   "current": {
     "logo": "shopify://shop_images/tone-logo-white.png",
     "logo_width": 110,
+    "favicon": "shopify:\/\/shop_images\/tone-black-square.png",
     "type_header_font": "inter_n3",
     "heading_scale": 100,
     "type_body_font": "inter_n3",
@@ -117,7 +109,7 @@
     "predictive_search_show_vendor": false,
     "predictive_search_show_price": false,
     "currency_code_enabled": true,
-    "cart_type": "notification",
+    "cart_type": "drawer",
     "show_vendor": false,
     "show_cart_note": false,
     "cart_drawer_collection": "",
