Fix typo on assy manual

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,6 +1,6 @@
 {
   "current": {
-    "logo": "shopify://shop_images/tone-logo-white.png",
+    "logo": "shopify:\/\/shop_images\/tone-logo-white.png",
     "logo_width": 110,
     "favicon": "shopify:\/\/shop_images\/tone-black-square.png",
     "type_header_font": "inter_n3",
@@ -97,7 +97,7 @@
     "sale_badge_color_scheme": "scheme-5",
     "sold_out_badge_color_scheme": "scheme-3",
     "social_facebook_link": "",
-    "social_instagram_link": "https://instagram.com/tonephotographic",
+    "social_instagram_link": "https:\/\/instagram.com\/tonephotographic",
     "social_youtube_link": "",
     "social_tiktok_link": "",
     "social_twitter_link": "",
@@ -132,7 +132,7 @@
     ],
     "blocks": {
       "15683396631634586217": {
-        "type": "shopify://apps/inbox/blocks/chat/841fc607-4181-4ad1-842d-e24d7f8bad6b",
+        "type": "shopify:\/\/apps\/inbox\/blocks\/chat\/841fc607-4181-4ad1-842d-e24d7f8bad6b",
         "disabled": false,
         "settings": {
           "button_color": "#000000",
